# rusty-tape

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
assets/: category.html  frontpage.html
frontend/: .editorconfig  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/src/: App.tsx  index.tsx
resources/: test-audio.m4a
src/: audio.rs  kasetophono.rs  main.rs
src/kasetophono/: Cargo.toml  blogger.rs  cassette.rs  category.rs  song.rs  subcategory.rs
src/kasetophono/assets/: feed.json
src/kasetophono/src/: cassette.rs  category.rs  lib.rs  scrape.rs  subcategory.rs
src/kasetophono/src/scrape/: blogger.rs  cassette.rs  category.rs  song.rs  subcategory.rs
src/taped/: Cargo.toml  build.rs
src/taped/src/: handlers.rs  main.rs
src/webui/: Cargo.toml  index.html
src/webui/src/: main.rs
