[package]
name = "rusty-tape"
version = "0.1.0"
authors = ["Petros Angelatos <petrosagg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1.4", features = [ "full" ] }
scraper = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2"
rayon = "1.5"
tempfile = "3.1"
anyhow = "1"
futures = "0.3"
warp = "0.3"
uuid = { version = "0.8", features = ["serde", "v5"] }

[profile.release]
lto = true
opt-level = 's'
panic = 'abort'
