[package]
name = "rusty-tape"
version = "0.1.0"
authors = ["Petros Angelatos <petrosagg@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
iced = { git = "https://github.com/hecrj/iced", features = [ "canvas" ]}
tokio = { version = "1", features = [ "full" ] }
scraper = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.9"
percent-encoding = "2"
rayon = "1"
tempfile = "3"
anyhow = "1"
futures = "0.3"
youtube_dl = "0.6"
warp = { version = "0.3", features = [ "compression" ] }
uuid = { version = "0.8", features = ["serde", "v5"] }

[profile.release]
lto = true
opt-level = 's'
panic = 'abort'
