[package]
name = "rusty-tape"
version = "0.1.0"
authors = ["Petros Angelatos <petrosagg@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
env_logger = "0.9"
futures = "0.3"
log = "0.4"
percent-encoding = "2"
reqwest = "0.11"
scraper = "0.11"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
tokio = { version = "1", features = [ "full" ] }
uuid = { version = "0.8", features = ["serde", "v5"] }
warp = { version = "0.3", features = [ "compression" ] }
youtube_dl = "0.6"
vlc-rs = "0.3"

[profile.release]
lto = true
opt-level = 's'
panic = 'abort'
