[package]
name = "kasetophono"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
scraper = "0.11"
youtube_dl = "0.6"
uuid = { version = "0.8", features = ["serde", "v5"] }
percent-encoding = "2"
