[package]
name = "kasetophono"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
scraper = { version = "0.11", optional = true }
youtube_dl = { version = "0.6", optional = true }
uuid = { version = "0.8", features = ["serde", "v5"] }
percent-encoding = { version = "2", optional = true }

[dev-dependencies]
serde_json = "1"

[features]
default = ["scrape"]
scrape = ["scraper", "youtube_dl", "percent-encoding"]
