[package]
name = "taped"
version = "0.1.0"
authors = ["Petros Angelatos <petrosagg@gmail.com>"]
edition = "2021"
default-run = "taped"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
env_logger = "0.9"
futures = "0.3"
http = "0.2"
include_dir = "0.7"
log = "0.4"
kasetophono = { path = "../kasetophono" }
mime_guess = "2"
reqwest = "0.11"
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = [ "full" ] }
uuid = { version = "0.8", features = ["serde", "v5"] }
warp = { version = "0.3", features = [ "compression" ] }
vlc-rs = "0.3"

[build-dependencies]
which = "4"
