[package]
name = "rusty-tape-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18"
reqwest = "0.11"
web-sys = { version = "0.3", features = ["console"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
