[package]
name = "rusty-tape-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kasetophono = { path = "../kasetophono", default-features = false }
reqwest = "0.11"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
yew = "0.18"
serde_json = "1"
uuid = { version = "0.8", features = ["serde", "v5"] }
